--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
-ENDPOINT=<digital ocean spaces endpoint>
-BUCKET=<digital ocean spaces bucket>
-ACCESS_KEY=<digital ocean spaces access key>
-SECRET_KEY=<digital ocean spaces secrey key>
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=<your secure password>
-DB_NAME=postgres
+S3_HOST=
+S3_BUCKET=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+
+DUMP_TIME=8h
+ENCRYPT_KEY=
+PREFIX=
+DUMP_NAME=
